// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package > setConfigs() > errors if input name contains a slash 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo/bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")]
`;

exports[`Package > setConfigs() > errors if input name contains a space 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`browser\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, esm, umd. Received "mjs".]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`native\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib. Received "esm".]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`node\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, mjs, cjs. Received "umd".]
`;

exports[`Package setConfigs() errors if input name contains a slash 1`] = `
"The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo/bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")"
`;

exports[`Package setConfigs() errors if input name contains a space 1`] = `
"The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")"
`;

exports[`Package setConfigs() errors if invalid format is provided for \`browser\` platform 1`] = `
"The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, esm, umd. Received "mjs"."
`;

exports[`Package setConfigs() errors if invalid format is provided for \`native\` platform 1`] = `
"The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib. Received "esm"."
`;

exports[`Package setConfigs() errors if invalid format is provided for \`node\` platform 1`] = `
"The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, mjs, cjs. Received "umd"."
`;
